[package]
name = "autophagy"
description = "Yet another AOT compiler for Rust"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/raviqqe/autophagy"
documentation = "https://raviqqe.github.io/autophagy/autophagy/"
readme = "../README.md"

[dependencies]
autophagy-macro = { version = "0.1", path = "../macro" }
derivative = "2.2.0"
quote = "1.0.39"
syn = "2.0.98"
