[package]
name = "autophagy-llvm"
description = "LLVM backend for Autophagy"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/raviqqe/autophagy"
documentation = "https://raviqqe.github.io/autophagy/autophagy_llvm/"
readme = "../README.md"

[dependencies]
autophagy = { version = "0.1", path = "../autophagy" }
inkwell = { version = "0.6.0", features = ["llvm16-0"] }
