[package]
name = "autophagy-macro"
description = "Internal macros for Autophagy"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/raviqqe/autophagy"
documentation = "https://raviqqe.github.io/autophagy/autophagy_macro/"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
autophagy = { path = "../autophagy" }
