[package]
name = "autophagy-mlir"
description = "MLIR backend for Autophagy"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/raviqqe/autophagy"
documentation = "https://raviqqe.github.io/autophagy/autophagy_mlir/"
readme = "../README.md"

[dependencies]
autophagy = { version = "0.1", path = "../autophagy" }
melior = "0.17"
quote = "1.0.35"
syn = "2.0.57"
train-map = "0.1.1"
